Add Facebooh auth

--- a/public/index.html
+++ b/public/index.html
@@ -31,15 +31,27 @@
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-<!--
-  This HTML file is a template.
-  If you open it directly in the browser, you will see an empty page.
+<!--Facebook SDK-->
+<!--<script>-->
+<!--    window.fbAsyncInit = function() {-->
+<!--        FB.init({-->
+<!--            appId      : '{your-app-id}',-->
+<!--            cookie     : true,-->
+<!--            xfbml      : true,-->
+<!--            version    : '{api-version}'-->
+<!--        });-->
 
-  You can add webfonts, meta tags, or analytics to this file.
-  The build step will place the bundled scripts into the <body> tag.
+<!--        FB.AppEvents.logPageView();-->
 
-  To begin the development, run `npm start` or `yarn start`.
-  To create a production bundle, use `npm run build` or `yarn build`.
--->
+<!--    };-->
+
+<!--    (function(d, s, id){-->
+<!--        var js, fjs = d.getElementsByTagName(s)[0];-->
+<!--        if (d.getElementById(id)) {return;}-->
+<!--        js = d.createElement(s); js.id = id;-->
+<!--        js.src = "https://connect.facebook.net/en_US/sdk.js";-->
+<!--        fjs.parentNode.insertBefore(js, fjs);-->
+<!--    }(document, 'script', 'facebook-jssdk'));-->
+<!--</script>-->
 </body>
 </html>
